--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "typecheck": "nuxt typecheck",
     "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
-    "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    "lint": "npm lint:js && npm lint:prettier",
+    "lintfix": "prettier --write --list-different . && npm lint:js --fix"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
